tests/rosetta/out/Erlang/100-doors-2.erl
#!/usr/bin/env escript
% Generated by Mochi compiler v0.10.26 on 2025-07-16T12:43:38Z
% 100-doors-2.erl - generated from 100-doors-2.mochi

main(_) ->
    Door0 = 1,
    Incrementer0 = 0,
    {Line1, Incrementer1, Door1} = lists:foldl(fun(Current, {Line, Incrementer, Door}) -> Line0 = "Door " ++ lists:flatten(io_lib:format("~p", [Current])) ++ " ", (case (Current == Door) of true -> Line1 = Line ++ "Open", Incrementer1 = (Incrementer + 1), Door1 = ((Door + (2 * Incrementer1)) + 1); _ -> Line1 = Line1 ++ "Closed" end), io:format("~p~n", [Line1]), {Line1, Incrementer1, Door1} end, {Line, Incrementer0, Door0}, lists:seq(1, (101)-1)).
